...
                        <Text
                            style={[
                                styles.campusButtonText,
                                selectedCampus === 'SGW' && styles.campusButtonTextActive,
                            ]}
                        >
                            SGW Campus
                        </Text>
                    </TouchableOpacity>
                    <TouchableOpacity
                        onPress={() => handleCampusChange('Loyola')}
                        style={[
                            styles.campusButton,
...
                        <Text
                            style={[
                                styles.campusButtonText,
                                selectedCampus === 'Loyola' && styles.campusButtonTextActive,
                            ]}
                        >
                            Loyola Campus
                        </Text>
                    </TouchableOpacity>
                </View>
            </View>

            {/* Google Map */}
...
