appId: com.soen390.campusguide
---
- launchApp
- extendedWaitUntil:
    visible: "SGW Campus"
    timeout: 1800000

- assertVisible: "SGW Campus"

- tapOn: "Schedule"
- waitForAnimationToEnd

- tapOn: ".*Connect Google Calendar"
- waitForAnimationToEnd

- assertVisible: "Choose an account"

- tapOn: "nativereacttest1234.*@gmail.com"
- waitForAnimationToEnd

- tapOn: "Continue"
- waitForAnimationToEnd

- assertVisible: "Sign in to App"

- tapOn: "Continue"
- waitForAnimationToEnd

- assertVisible: "App wants access to your Google Account"

- tapOn: ".*see.*"
- waitForAnimationToEnd

- swipe:
    direction: UP
    duration: 500
- waitForAnimationToEnd

- tapOn: "Continue"
- waitForAnimationToEnd

- assertVisible: ".*Connected to Google Calendar"

- tapOn: ".*Manage Calendars"
- waitForAnimationToEnd

- assertVisible: "Select Calendars"

- tapOn: ".*Holidays in Canada"
- waitForAnimationToEnd

- tapOn: "Save"
- waitForAnimationToEnd

- swipe:
    direction: UP
    duration: 500
- waitForAnimationToEnd

- assertVisible: ".*NEXT CLASS"

- stopApp